--- a/index.html
+++ b/index.html
@@ -238,6 +238,17 @@
       input[type="search"]{min-width: 180px; width:100%;}
       .controls{justify-content:flex-start;}
     }
+    html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+main, .container, #app {
+  min-height: 100vh;
+}
+
   </style>
 </head>
 <body>
